# pxargs

./: Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  package.sh
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
man/: Makefile  Makefile.am  Makefile.in  pxargs.1
src/: Makefile  Makefile.am  Makefile.in  main.c  pbsu.c  pbsu.h  ptmpf.c  ptmpf.h  pxargs.c  pxargs.h
src/.deps/: main.Po  ptmpf.Po  pxargs.Po
